# src/modules/accounts/entities/User.ts
@@ -1,16 +1,26 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 import { v4 as uuidv4 } from "uuid";
 
-@Entity("specifications")
-class Specification {
+@Entity("users")
+class User {
+
     @PrimaryColumn()
-    id?: string;
+    id: string;
 
     @Column()
     name: string;
 
     @Column()
-    description: string;
+    email: string;
+
+    @Column()
+    password: string;
+
+    @Column()
+    driver_license: string;
+
+    @Column()
+    isAdmin: boolean;
 
     @CreateDateColumn()
     created_at: Date;
@@ -20,6 +30,7 @@ class Specification {
             this.id = uuidv4();
         }
     }
+
 }
 
-export { Specification }
+export { User }
